# haskell-ci

./: .gitattributes  .gitignore  .hlint.yaml  .pre-commit-hooks.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  LICENSE  Main.hs  MakeTravisYml.hs  Makefile  README.md  Tests.hs  cabal.haskell-ci  cabal.make-travis-yml  cabal.project  flake.nix  haskell-ci.cabal  haskell-ci.sh  haskell-ci.sh.zinza  make-travis-yml.cabal  make_travis_yml.hs  make_travis_yml_2.hs  stack.yaml
.github/workflows/: haskell-ci.yml  windows.yml
cabal-install-parsers/: Changelog.md  LICENSE.GPLv2  cabal-install-parsers.cabal
cabal-install-parsers/bench/: Bench.hs
cabal-install-parsers/fixtures/: haskell-ci.golden  haskell-ci.project
cabal-install-parsers/src/Cabal/: Config.hs  Index.hs  Optimization.hs  Package.hs  Parse.hs  Project.hs  SourceRepo.hs
cabal-install-parsers/src/Cabal/Internal/: Glob.hs  Newtypes.hs
cabal-install-parsers/test/: Golden.hs  Index.hs
cabal-parsers/: LICENSE  LICENSE.GPLv3  cabal-parsers.cabal
cabal-parsers/fixtures/: haskell-ci.project
cabal-parsers/src/Cabal/: Config.hs  Index.hs  Optimization.hs  Package.hs  Project.hs  SourceRepo.hs
cabal-parsers/src/Cabal/Internal/: Newtypes.hs
cabal-parsers/test/: Golden.hs  Index.hs
cli/: Main.hs
collections/: cabal.project.debian-8  cabal.project.lts-0.0  cabal.project.lts-0.1  cabal.project.lts-0.2  cabal.project.lts-0.3  cabal.project.lts-0.4  cabal.project.lts-0.5  cabal.project.lts-0.6  cabal.project.lts-0.7  cabal.project.lts-1.0  cabal.project.lts-1.1  cabal.project.lts-1.10  cabal.project.lts-1.11  cabal.project.lts-1.12  cabal.project.lts-1.13  cabal.project.lts-1.14  cabal.project.lts-1.15  cabal.project.lts-1.2  cabal.project.lts-1.4  cabal.project.lts-1.5  cabal.project.lts-1.7  cabal.project.lts-1.8  cabal.project.lts-1.9  cabal.project.lts-2.0  cabal.project.lts-2.1  cabal.project.lts-2.10  cabal.project.lts-2.11  cabal.project.lts-2.12  cabal.project.lts-2.13  cabal.project.lts-2.14  cabal.project.lts-2.15  cabal.project.lts-2.16  cabal.project.lts-2.17  cabal.project.lts-2.18  cabal.project.lts-2.19  cabal.project.lts-2.2  cabal.project.lts-2.20  cabal.project.lts-2.21  cabal.project.lts-2.22  cabal.project.lts-2.3  (+54 more)
docker/: .gitignore  Dockerfile.template  Makefile  README.md
docker/generic/: Dockerfile
docker/ghc-7.0.2/: Dockerfile
docker/ghc-7.0.4/: Dockerfile
docker/ghc-7.10.3/: Dockerfile
docker/ghc-7.4.2/: Dockerfile
docker/ghc-7.6.3/: Dockerfile
docker/ghc-7.8.4/: Dockerfile
docker/ghc-8.0.2/: Dockerfile
docker/ghc-8.2.2/: Dockerfile
docker/ghc-8.4.4/: Dockerfile  cabal.config
docker/ghc-8.6.4/: Dockerfile
docker/ghc-8.6.5/: Dockerfile
docker/ghc-8.8.1/: Dockerfile
docs/: Makefile  conf.py  index.rst
extras/: colorful.awk
fixtures/: all-versions.bash  all-versions.github  all-versions.sourcehut  all-versions.sourcehut-parallel  all-versions.travis  cabal.haskell-ci  cabal.make-travis-yml  cabal.project.copy-fields.all  cabal.project.copy-fields.all.stderr  cabal.project.copy-fields.all.travis.yml  cabal.project.copy-fields.none.stderr  cabal.project.copy-fields.none.travis.yml  cabal.project.copy-fields.some  cabal.project.copy-fields.some.stderr  cabal.project.copy-fields.some.travis.yml  cabal.project.empty-line  cabal.project.empty-line.stderr  cabal.project.empty-line.travis.yml  cabal.project.fail-versions.stderr  cabal.project.haskell-ci  cabal.project.messy.stderr  cabal.project.messy.travis.yml  cabal.project.travis-patch.patch  cabal.project.travis-patch.stderr  cabal.project.travis-patch.travis.yml  conditionals.bash  conditionals.github  conditionals.project  copy-fields-all.args  copy-fields-all.bash  copy-fields-all.github  copy-fields-all.sourcehut  copy-fields-all.sourcehut-parallel  copy-fields-all.travis  copy-fields-none.args  copy-fields-none.bash  copy-fields-none.github  copy-fields-none.sourcehut  copy-fields-none.sourcehut-parallel  copy-fields-none.travis  (+78 more)
fixtures/doc/tutorial/: tutorial.cabal
fixtures/servant/: servant.cabal
fixtures/servant-client/: servant-client.cabal
fixtures/servant-client-core/: servant-client-core.cabal
fixtures/servant-docs/: servant-docs.cabal
fixtures/servant-foreign/: servant-foreign.cabal
fixtures/servant-server/: servant-server.cabal
fixtures/splitmix/: splitmix.cabal
src/: Config.hs  Glob.hs  HaskellCI.hs  MakeTravisYml.hs  MemoryHug.hs  MemoryHug1.hs  MemoryHug2.hs  MemoryHug3.hs  MemoryHug4.hs  MemoryHug5.hs  MemoryHug6.hs  MemoryHug7.hs  MemoryHug8.hs  MemoryHug9.hs
src/Distribution/FieldGrammar/: Pretty3.hs
src/Distribution/Fields/: Pretty.hs
src/HaskellCI/: .Travis.hs.swo  Auxiliary.hs  Bash.hs  Cabal.hs  Cli.hs  Compiler.hs  Config.hs  Diagnostics.hs  Error.hs  Extras.hs  GHC.hs  Ghcup.hs  GitConfig.hs  GitHub.hs  Glob.hs  GrammarDefault.hs  HeadHackage.hs  Jobs.hs  List.hs  MakeTravisOutput.hs  MonadErr.hs  Newtypes.hs  Optimization.hs  OptionsGrammar.hs  OptparseGrammar.hs  Package.hs  ParsecError.hs  ParsecUtils.hs  Prelude.hs  Project.hs  SetupMethod.hs  Sh.hs  ShVersionRange.hs  Sourcehut.hs  TestedWith.hs  Tools.hs  Travis.hs  Version.hs  VersionInfo.hs  YamlSyntax.hs
src/HaskellCI/Bash/: Template.hs
src/HaskellCI/Config/: Components.hs  ConstraintSet.hs  CopyFields.hs  Diff.hs  Docspec.hs  Doctest.hs  Dump.hs  Empty.hs  Folds.hs  Grammar.hs  HLint.hs  History.hs  Initial.hs  Installed.hs  Jobs.hs  PackageScope.hs  Type.hs  Ubuntu.hs  Validity.hs
src/HaskellCI/GitHub/: Yaml.hs
src/HaskellCI/Sourcehut/: Yaml.hs
src/HaskellCI/Travis/: Yaml.hs
src/System/Path/: Extras.hs
test/: Tests.hs
