-- this .cabal file is mostly for convenience; the scripts are designed to be run via `runghc` w/o the need to compile them

name:                make-travis-yml
version:             0
synopsis:            Script generator for Travis-CI
homepage:            https://github.com/hvr/multi-ghc-travis
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.1

executable make-travis-yml
  main-is:             make_travis_yml_2.hs
  other-extensions:    CPP, ViewPatterns
  build-depends:       base  >=4.7  && <4.11
                     , Cabal >=1.10 && <2.1
  default-language:    Haskell2010

-- executable make-travis-yml-old
--   main-is:             make_travis_yml.hs
--   build-depends:       base  >=4.7  && <4.11
--                      , Cabal >=1.10 && <1.25
--   default-language:    Haskell2010
