-- this .cabal file is mostly for convenience; the scripts are designed to be run via `runghc` w/o the need to compile them

name:                make-travis-yml
version:             0
synopsis:            Script generator for Travis-CI
homepage:            https://github.com/hvr/multi-ghc-travis
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.1
extra-source-files:
  fixtures/make-travis-yml.cabal
  fixtures/make-travis-yml.cabal.stderr
  fixtures/make-travis-yml.cabal.travis.yml
  fixtures/cabal.project.empty-line
  fixtures/cabal.project.empty-line.stderr
  fixtures/cabal.project.empty-line.travis.yml
  fixtures/cabal.project.fail-versions
  fixtures/cabal.project.fail-versions.stderr
  fixtures/cabal.project.messy
  fixtures/cabal.project.messy.stderr
  fixtures/cabal.project.messy.travis.yml
  fixtures/doc/tutorial/tutorial.cabal
  fixtures/servant-client-core/*.cabal
  fixtures/servant-client/*.cabal
  fixtures/servant-docs/*.cabal
  fixtures/servant-foreign/*.cabal
  fixtures/servant-server/*.cabal
  fixtures/servant/*.cabal

executable make-travis-yml
  main-is:             MakeTravisYml.hs
  ghc-options:         -main-is MakeTravisYml
  other-extensions:    CPP, ViewPatterns, NamedFieldPuns
  build-depends:       base  >=4.7  && <4.11
                     , Cabal >=1.10 && <2.1
                     , containers >=0.4 && <0.6
                     , directory >=1.1 && <1.4
                     , filepath >=1.2 && <1.5
                     , transformers >= 0.3 && <0.6
                     , deepseq >=1.3 && <1.5
  default-language:    Haskell2010

-- executable make-travis-yml-old
--   main-is:             make_travis_yml.hs
--   build-depends:       base  >=4.7  && <4.11
--                      , Cabal >=1.10 && <1.25
--   default-language:    Haskell2010

test-suite golden
  type:              exitcode-stdio-1.0
  main-is:           Tests.hs
  other-modules:     MakeTravisYml
  build-depends:       base  >=4.7  && <4.11
                     , Cabal >=1.10 && <2.1
                     , transformers >= 0.3 && <0.6
                     , deepseq >=1.3 && <1.5
                     , containers >=0.4 && <0.6
                     , directory >=1.1 && <1.4
                     , filepath
                     , bytestring
                     , tasty >= 0.11.3 && <0.12
                     , tasty-golden >=2.3.1.1 && <2.4
                     , Diff >=0.3.4 && <0.4
  default-language:    Haskell2010
