cabal-version:      2.2
name:               cabal-install-parsers
version:            0.6.2
synopsis:           Utilities to work with cabal-install files
description:
  @cabal-install-parsers@ provides parsers for @cabal-install@ files:
  @cabal.project@ ("Cabal.Project"),
  @cabal.config@ ("Cabal.Config"),
  @01-index.tar@ ("Cabal.Index");
  as well as some other utilities.
  .
  The feature set is mainly motivated by the needs of @haskell-ci@ package.
  The parsed data is not complete, functionality is added on demand.

homepage:           https://haskell-ci.rtfd.org/
bug-reports:        https://github.com/haskell-CI/haskell-ci/issues
license:            GPL-2.0-or-later AND BSD-3-Clause
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Herbert Valerio Riedel, Oleg Grenrus
maintainer:         hvr@gnu.org, oleg.grenrus@iki.fi
category:           Development
build-type:         Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

extra-source-files:
  Changelog.md
  fixtures/*.golden
  fixtures/*.project

source-repository head
  type:     git
  location: https://github.com/haskell-CI/haskell-ci.git

library
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Wnoncanonical-monad-instances

  hs-source-dirs:   src
  exposed-modules:
    Cabal.Config
    Cabal.Index
    Cabal.Optimization
    Cabal.Package
    Cabal.Parse
    Cabal.Project
    Cabal.SourceRepo

  other-modules:
    Cabal.Internal.Glob
    Cabal.Internal.Newtypes

  -- GHC-boot libraries
  build-depends:
    , base          >=4.12      && <4.21
    , binary        ^>=0.8.6.0
    , bytestring    ^>=0.10.8.2 || ^>=0.11.1.0 || ^>=0.12.0.2
    , Cabal-syntax  ^>=3.12.0.0
    , containers    ^>=0.6.0.1  || ^>=0.7
    , deepseq       ^>=1.4.2.0  || ^>=1.5.0.0
    , directory     ^>=1.3.0.0
    , filepath      ^>=1.4.1.1  || ^>=1.5.2.0
    , parsec        ^>=3.1.13.0
    , pretty        ^>=1.1.3.3
    , text          ^>=1.2.3.0  || ^>=2.0.1    || ^>=2.1
    , time          ^>=1.8.0.2  || ^>=1.9.3    || ^>=1.11.1.1 || ^>=1.12.2
    , transformers  ^>=0.5.2.0  || ^>=0.6.1.0

  -- extra dependencies
  build-depends:
    , aeson              ^>=2.1.0.0    || ^>=2.2.0.0
    , base16-bytestring  ^>=1.0.0.0
    , binary-instances   ^>=1
    , cryptohash-sha256  ^>=0.11.101.0
    , lukko              ^>=0.1.1
    , network-uri        ^>=2.6.1.0
    , tar                ^>=0.5.1.1    || ^>=0.6.0.0

test-suite cabal-parsers-index
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Index.hs
  hs-source-dirs:   test

  -- inherited constraints
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cabal-install-parsers
    , Cabal-syntax
    , containers
    , tar

  -- dependencies needing explicit constraints
  build-depends:
    , tasty        ^>=1.4      || ^>=1.5
    , tasty-hunit  ^>=0.10.0.2

test-suite cabal-parsers-golden
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Golden.hs
  hs-source-dirs:   test

  -- inherited constraints
  build-depends:
    , base
    , bytestring
    , cabal-install-parsers
    , Cabal-syntax
    , containers
    , directory
    , filepath
    , pretty

  -- dependencies needing explicit constraints
  build-depends:
    , ansi-terminal  >=1.0      && <1.2
    , tasty          ^>=1.4     || ^>=1.5
    , tasty-golden   ^>=2.3.1.1
    , tree-diff      >=0.2      && <0.4

benchmark cabal-parsers-bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  hs-source-dirs:   bench

  -- inherited constraints
  build-depends:
    , base
    , bytestring
    , cabal-install-parsers
    , Cabal-syntax
    , containers
    , directory
    , filepath

  -- dependencies needing explicit constraints
  build-depends:    criterion ^>=1.6.0.0
